test/cases/compile_errors/file_level_tuple.zig
u32,
comptime u8 = 123,

// error
//
// :1:1: error: file cannot be a tuple
